# swiyu-rs

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LESSONS-LEARNED.md  LICENSE  README.md
swiyu-core/: Cargo.toml
swiyu-core/specs/: did-jwk.md  did-method-comparison.md  diddoc.md  didlog.md  statuslist.md
swiyu-core/src/: jws.rs  key_role.rs  lib.rs  proof.rs  sd_jwt.rs
swiyu-core/src/did/: mod.rs
swiyu-core/src/did_jwk/: mod.rs
swiyu-core/src/diddoc/: builder.rs  mod.rs  public_keys.rs
swiyu-core/src/didjwk/: mod.rs
swiyu-core/src/didlog/: build.rs  entry_edits.rs  mod.rs  scid.rs  verify.rs
swiyu-core/src/oid4vci/: mod.rs
swiyu-core/src/statuslist/: mod.rs
swiyu-core/src/truststatement/: mod.rs
swiyu-core/tests/fixtures/: valid_tdw_log.jsonl
swiyu-didtool/: .env.example  Cargo.toml  Dockerfile  README.md  build-image.sh
swiyu-didtool/doc/: sample-use-case.md
swiyu-didtool/specs/: crypto.md  didtool.md  key-store.md
swiyu-didtool/src/: crypto.rs  keystore.rs  lib.rs  main.rs  oauth2.rs  swiyu.rs
swiyu-didtool/src/cmd/: create.rs  create_pop.rs  deactivate.rs  diddoc.rs  didlog.rs  file.rs  http.rs  key.rs  log.rs  mod.rs  proof.rs  update.rs  verify_pop.rs
swiyu-issuer/: .env.example  .envrc  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi-mgmt.yml  openapi-oidc.yml  openapi.yml  plan-step10.md  plan-step7.md  plan-step8.md  plan-step9.md  plan.md  test-commands.txt
swiyu-issuer-web/bff/: .env.example  Cargo.toml
swiyu-issuer-web/bff/src/: config.rs  error.rs  main.rs
swiyu-issuer/deploy/explorer/: .env.example  README.md  docker-compose.yml  gen-compose.py  publish-images.sh  pyproject.toml
swiyu-issuer/examples/: README.md  credential_lifecycle_smoke.rs  credential_status_lifecycle_smoke.rs  issuer_lifecycle_smoke.rs
swiyu-issuer/migrations/: 20260430_000001_init.sql  20260501_000002_offer_state_timestamps.sql  20260502_000003_api_tokens.sql  20260503_000004_issuer_metadata.sql  20260504_000005_oidc_offer_bridge.sql  20260505_000006_oidc_token_state.sql  20260506_000002_status_lists.sql  20260506_000007_inline_pre_auth_code.sql  20260507_000003_issued_credentials.sql  20260507_000008_signing_engine_dev_keypairs.sql  20260508_000004_status_list_registry_coords.sql  20260508_000009_operation_tasks.sql  20260509_000010_issuer_signing_engine.sql  20260512_000001_tenant_create_and_update.sql  20260513_000001_unique_partner_id.sql  20260516_000011_tenant_partner_id.sql  20260517_000012_issuers_created_at.sql  20260518_000001_create_credential_types.sql  20260519_000001_create_issuer_credential_types.sql  20260520_000001_credential_offers_credential_type_id.sql  20260601_000001_tenants_oauth.sql  20260612_000001_tenants_oauth_encrypted.sql
swiyu-issuer/schemas/: urn_communal_local-residence-id.json  urn_dummy_dummy-credential.claims.json  urn_dummy_dummy-credential.display.json  urn_dummy_dummy-credential.schema.json
swiyu-issuer/specs/: aspect-credential-management.md  aspect-credential-type.md  aspect-domain.md  aspect-issuer.md  aspect-key-management.md  aspect-key-management.obsolete.md  aspect-multi-tenancy.md  aspect-oauth2.md  aspect-persistence.md  aspect-presenter-subject-gap.md  aspect-secret-management.md  aspect-technology.md  impl-credential-management.md  impl-credential-type.md  impl-issuer.md  impl-key-management.md  impl-oauth2.md  impl-secret-management.md  impl-tenant-management.md  impl_api_management.md  impl_api_oidc.md  impl_auth.md  impl_credential_schema.md  impl_domain.md  impl_key_management.md  impl_key_management.obsolete.md  impl_persistence.md  notes-vault-api.md  plan-credential-type.md  plan-docker-images-explorer.md  plan-operation-task-transitions.md  plan-vault-signing-engine.md  topic-docker-images.md
swiyu-issuer/src/: config.rs  lib.rs
swiyu-issuer/src/api_management/: auth.rs  credential_offers.rs  credential_types.rs  cursor.rs  dto.rs  error.rs  issued_credentials.rs  issuers.rs  mod.rs  operation_tasks.rs  schemas.rs  state.rs
swiyu-issuer/src/api_oidc/: credential.rs  credential_offer.rs  error.rs  metadata.rs  mod.rs  oauth_error.rs  schemas.rs  signer.rs  state.rs  token.rs
swiyu-issuer/src/cli/: tenant.rs
swiyu-issuer/src/domain/: access_token.rs  api_token.rs  credential_offer.rs  credential_type.rs  errors.rs  ids.rs  issued_credential.rs  issuer.rs  issuer_credential_type.rs  mod.rs  nonce.rs  operation_task.rs  pre_auth_code.rs  tenant.rs  vct.rs
swiyu-issuer/src/persistence/: api_tokens.rs  credential_offers.rs  credential_types.rs  errors.rs  helpers.rs  issued_credentials.rs  issuer_credential_types.rs  issuers.rs  mod.rs  operation_tasks.rs  pool.rs  status_lists.rs  tenant_secret_keys.rs  tenants.rs
swiyu-issuer/src/state/: mod.rs  validators.rs
swiyu-issuer/src/test_support/: env.rs  fixtures.rs  http.rs  mod.rs  time.rs
swiyu-issuer/tests/: api_create_issuer.rs  api_deactivate_issuer.rs  api_get_issuer.rs  api_get_operation_task.rs  api_list_issuers.rs  api_management_credential_type_assignments.rs  api_management_credential_types.rs  api_management_issued_credentials.rs  api_management_issued_credentials_get.rs  api_oidc_cors.rs  api_oidc_credential.rs  api_oidc_public_schema.rs  api_rotate_keys.rs  credential_offers_persistence.rs  credential_types_persistence.rs  dev_signing_engine.rs  dispatch.rs  issued_credentials_persistence.rs  issuer_credential_types_persistence.rs  issuers_persistence.rs  main.rs  mark_deactivated.rs  oauth2_e2e.rs  operation_tasks_persistence.rs  persist_issuer.rs  provision_status_list.rs  status_list_publish.rs  status_list_publisher.rs  status_lists_persistence.rs  swap_keys.rs  swiyu_issuer_cli.rs  tenants_persistence.rs  vault_secret_encryption_engine.rs  vault_signing_engine.rs  worker_deactivate_e2e.rs  worker_e2e.rs  worker_rotate_keys_e2e.rs  worker_run.rs
swiyu-registries/: Cargo.toml  README.md
swiyu-registries/specs/: aspect-oauth2.md  impl-identifier-registry.md  impl-status-registry.md
swiyu-registries/src/: lib.rs
swiyu-registries/tests/: identifier.rs  status.rs
(+230 files in other folders)
