[package]
name = "swiyu-core"
version = "0.1.5"
edition = "2024"
license = "MIT"

[dependencies]
base64 = { version = "0.22", features = ["alloc"] }
bs58 = "0.5"
ed25519-dalek = "2"
flate2 = "1"
serde_json = "1"
multihash = "0.19.4"
multihash-codetable = { version = "0.2", features = ["sha2"] }
serde_jcs = "0.2"
