[package]
name = "swiyu-core"
version = "0.3.2"
edition = "2024"
license = "MIT"

[dependencies]
base64 = { version = "0.22", features = ["alloc"] }
bs58 = "0.5"
ed25519-dalek = "2"
flate2 = "1"
serde_json = "1"
multihash = "0.19.4"
multihash-codetable = { version = "0.2", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde_jcs = "0.2"
sha2 = "0.10"
