[package]
name = "swiyu-didtool"
version = "0.3.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "didtool"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json", "rustls", "webpki-roots"], default-features = false }
swiyu-core = { path = "../swiyu-core" }
base64 = { version = "0.22", features = ["alloc"] }
blake3 = "1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
# pinned to 0.8: ed25519-dalek and p256 depend on rand_core 0.6, incompatible with rand 0.9+
rand = "0.8"
serde_json = "1"
serde_jcs = "0.2"
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
