[package]
name = "swiyu-issuer"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
swiyu-core = { path = "../swiyu-core" }
axum = "0.8"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
getrandom = "0.4"
humantime = "2"
jsonschema = "0.46"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
serde_urlencoded = "0.7"
