[package]
name = "swiyu-issuer"
version = "0.1.4"
edition = "2024"
license = "MIT"

[dependencies]
swiyu-core = { path = "../swiyu-core" }
swiyu-registries = { path = "../swiyu-registries" }
axum = "0.8"
base64 = "0.22"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = "0.4"
humantime = "2"
jsonschema = "0.46"
p256 = { version = "0.13", features = ["ecdsa"] }
# Pinned to 0.6 because the stable ed25519-dalek 2.x and p256 0.13.x lines both depend on
# rand_core 0.6 transitively; their generate/sign APIs take an `&mut impl rand_core_0_6::RngCore`.
# Newer rand_core (0.9, 0.10) is only adopted by ed25519-dalek 3.0-pre and p256 0.14-rc, which we
# are not chasing on a stable toolchain. Mixing 0.6 and 0.10 would double rand_core in the build
# without functional gain; revisit when ed25519-dalek 3.0 / p256 0.14 ship stable.
# We only need OsRng, so pull in rand_core rather than the full rand crate.
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "json", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tokio-util = { version = "0.7" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_urlencoded = "0.7"
wiremock = "0.6"
